--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,6 +9,9 @@
 }
 
 /* shared style */
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color:#FD6E0A;
 }
@@ -27,6 +30,16 @@
     border-radius: 5px;
 }
 
+.section-title{
+    font-size: 35px;
+    font-weight:bold ;
+    color:#181818;
+} 
+
+.section-description{
+    font-size: 18px;
+    color:#757575 ;
+}
 
 /* nav styles */
 
@@ -88,4 +101,26 @@ nav li a {
 
     .banner-profile-picture{
         width: 580;
+    }
+
+    /* main styles */
+    main{
+        max-width: 1140px;
+        margin: 0 auto;
+    }
+
+    /* about styles */
+    .about{
+        border-radius: 10px;
+        padding: 130px 150px;
+        text-align: center;
+        margin-top: 130px;
+    }
+.about-item{
+    display: flex;
+    justify-content: space-around;
+}
+
+    .item-description{
+        font-weight:600 ;
     }
