--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -41,6 +41,10 @@
     color:#757575 ;
 }
 
+.text-center{
+    text-align: center;
+}
+
 /* nav styles */
 
 nav{
@@ -109,12 +113,17 @@ nav li a {
         margin: 0 auto;
     }
 
+    main section{
+        margin-top:130px ;
+        margin-bottom: 130px;
+    }
+
     /* about styles */
     .about{
         border-radius: 10px;
         padding: 130px 150px;
         text-align: center;
-        margin-top: 130px;
+        
     }
 .about-item{
     display: flex;
@@ -123,4 +132,16 @@ nav li a {
 
     .item-description{
         font-weight:600 ;
+    }
+
+    /* skills section styles */
+    .skills-container{
+        display: flex;
+        gap: 24px;
+    }
+
+    .skill{
+        padding:30px ;
+        box-shadow: 0px 6px 50px 0px rgba(0,0,0,0.06);
+        border-radius: 5px;
     }
