--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -145,3 +145,8 @@ nav li a {
         box-shadow: 0px 6px 50px 0px rgba(0,0,0,0.06);
         border-radius: 5px;
     }
+
+    .resume{
+        display: flex;
+        justify-content: space-around;
+    }
